examples/test/testpolicy19.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key39: value6
      key12: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value27
          key35: value7
      podSelector:
        matchLabels:
          key27: value31
          key40: value6
